---
source: crates/pixi_manifest/src/system_requirements.rs
assertion_line: 309
expression: "\n        [system-requirements]\n        lib = \"2.12\"\n        "
---
TOML parse error at line 3, column 9
  |
3 |         lib = "2.12"
  |         ^^^
unknown field `lib`, expected one of `macos`, `linux`, `cuda`, `libc`, `archspec`
